Avoiding whitespace wrapping in MultiSelectView, hiding content if necessary

--- a/app/assets/stylesheets/common_components/multi_select.css.scss
+++ b/app/assets/stylesheets/common_components/multi_select.css.scss
@@ -146,6 +146,8 @@
       float: none;
       width: auto;
       cursor: pointer;
+      white-space: nowrap;
+      overflow-x: hidden;
     }
   }
 }
